# weblog

./: .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  main.py  manage.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt
config/: urls.py
config/settings/: base.py  dev.py
scripts/: renew-ssl.sh  ssl-setup.sh
srcs/: __init__.py  db.sqlite3
srcs/config/: urls.py
srcs/config/db/: init.sh
srcs/config/settings/: base.py  dev.py  production.py
srcs/config/templates/: base.html
srcs/home/: models.py
srcs/home/migrations/: 0003_homepage_body_homepage_intro.py  0004_alter_homepage_body.py  0005_homepage_cover_image.py
srcs/static/css/: gnb.css  main.css
srcs/static/js/: config.js
srcs/static/scss/: main.scss
srcs/templates/: base.html
srcs/templates/home/: home_page.html
srcs/templates/partials/: footer.html  gnb.html
srcs/templates/weblog/: blog_index_page.html  blog_page.html  tag_index_page.html
srcs/theme/: package-lock.json  package.json  tailwind.config.js
srcs/weblog/: admin.py  apps.py  models.py  urls.py  views.py  wagtail_hooks.py
srcs/weblog/migrations/: 0001_initial.py  0002_alter_blogpage_tags.py  0002_blogpage_cover_image.py  0003_category_cover_image_homepage.py  0003_remove_blogpage_cover_image_blogpage_body_and_more.py  0004_blogpage_cover_image.py  0004_delete_homepage.py  (+2 more)
weblog/: api.py  models.py  urls.py  wsgi.py
weblog/migrations/: 0001_initial.py
weblog/settings/: base.py  dev.py
weblog/templates/: base.html
(+22 files in other folders)
